// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component tests Size: custom, shape: circle, type: icon, with custom icon color 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 102,
          "width": 102,
        },
        {
          "backgroundColor": "#44e858",
        },
        {
          "borderRadius": 100,
        },
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={44}
      bbWidth={44}
      fill="none"
      focusable={false}
      height={44}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#FF00FF"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 44,
            "width": 44,
          },
        ]
      }
      testID="Avatar.icon"
      vbHeight={24}
      vbWidth={24}
      width={44}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4294902015,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294902015,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="Avatar.icon"
        />
        <RNSVGPath
          d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294902015,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="Avatar.icon"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Avatar component tests Size: large, shape: circle, type: icon 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 35,
          "width": 35,
        },
        {
          "backgroundColor": "#44e858",
        },
        {
          "borderRadius": 100,
        },
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      fill="none"
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#2b2e33"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      testID="Avatar.icon"
      vbHeight={24}
      vbWidth={24}
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4281019955,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281019955,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="Avatar.icon"
        />
        <RNSVGPath
          d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281019955,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="Avatar.icon"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Avatar component tests Size: large, shape: circle, type: image 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 35,
          "width": 35,
        },
        false,
        {
          "borderRadius": 100,
        },
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <Image
      resizeMode="cover"
      source={
        {
          "testUri": "../../../src/components/Avatar/testImage.png",
        }
      }
      style={
        {
          "height": 35,
          "width": 35,
        }
      }
      testID="Avatar.image"
    />
  </View>
</View>
`;

exports[`Avatar component tests Size: large, shape: circle, type: label 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 35,
          "width": 35,
        },
        {
          "backgroundColor": "#44e858",
        },
        {
          "borderRadius": 100,
        },
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <Text
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        {
          "color": "#2b2e33",
          "fontFamily": "Noto Sans",
          "fontSize": 16,
          "includeFontPadding": false,
          "textTransform": "uppercase",
          "verticalAlign": "middle",
        }
      }
      testID="Avatar.text"
    >
      A
    </Text>
  </View>
</View>
`;

exports[`Avatar component tests Size: large, shape: sqare, type: icon 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 35,
          "width": 35,
        },
        {
          "backgroundColor": "#44e858",
        },
        false,
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      fill="none"
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#2b2e33"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      testID="Avatar.icon"
      vbHeight={24}
      vbWidth={24}
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4281019955,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281019955,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="Avatar.icon"
        />
        <RNSVGPath
          d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281019955,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="Avatar.icon"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Avatar component tests Size: large, shape: square, type: image 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 35,
          "width": 35,
        },
        false,
        false,
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <Image
      resizeMode="cover"
      source={
        {
          "testUri": "../../../src/components/Avatar/testImage.png",
        }
      }
      style={
        {
          "height": 35,
          "width": 35,
        }
      }
      testID="Avatar.image"
    />
  </View>
</View>
`;

exports[`Avatar component tests Size: large, shape: square, type: label 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 35,
          "width": 35,
        },
        {
          "backgroundColor": "#44e858",
        },
        false,
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <Text
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        {
          "color": "#2b2e33",
          "fontFamily": "Noto Sans",
          "fontSize": 16,
          "includeFontPadding": false,
          "textTransform": "uppercase",
          "verticalAlign": "middle",
        }
      }
      testID="Avatar.text"
    >
      A
    </Text>
  </View>
</View>
`;

exports[`Avatar component tests Size: nomal, shape: circle, type: icon 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 28,
          "width": 28,
        },
        {
          "backgroundColor": "#44e858",
        },
        {
          "borderRadius": 100,
        },
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      fill="none"
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#2b2e33"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      testID="Avatar.icon"
      vbHeight={24}
      vbWidth={24}
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4281019955,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281019955,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="Avatar.icon"
        />
        <RNSVGPath
          d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281019955,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="Avatar.icon"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Avatar component tests Size: normal, shape: circle, type: image 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 28,
          "width": 28,
        },
        false,
        {
          "borderRadius": 100,
        },
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <Image
      resizeMode="cover"
      source={
        {
          "testUri": "../../../src/components/Avatar/testImage.png",
        }
      }
      style={
        {
          "height": 28,
          "width": 28,
        }
      }
      testID="Avatar.image"
    />
  </View>
</View>
`;

exports[`Avatar component tests Size: normal, shape: circle, type: label 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 28,
          "width": 28,
        },
        {
          "backgroundColor": "#44e858",
        },
        {
          "borderRadius": 100,
        },
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <Text
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        {
          "color": "#2b2e33",
          "fontFamily": "Noto Sans",
          "fontSize": 16,
          "includeFontPadding": false,
          "textTransform": "uppercase",
          "verticalAlign": "middle",
        }
      }
      testID="Avatar.text"
    >
      A
    </Text>
  </View>
</View>
`;

exports[`Avatar component tests Size: normal, shape: sqare, type: icon 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 28,
          "width": 28,
        },
        {
          "backgroundColor": "#44e858",
        },
        false,
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      fill="none"
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#2b2e33"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      testID="Avatar.icon"
      vbHeight={24}
      vbWidth={24}
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4281019955,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281019955,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="Avatar.icon"
        />
        <RNSVGPath
          d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281019955,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="Avatar.icon"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Avatar component tests Size: normal, shape: square, type: image 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 28,
          "width": 28,
        },
        false,
        false,
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <Image
      resizeMode="cover"
      source={
        {
          "testUri": "../../../src/components/Avatar/testImage.png",
        }
      }
      style={
        {
          "height": 28,
          "width": 28,
        }
      }
      testID="Avatar.image"
    />
  </View>
</View>
`;

exports[`Avatar component tests Size: normal, shape: square, type: label 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 28,
          "width": 28,
        },
        {
          "backgroundColor": "#44e858",
        },
        false,
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <Text
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        {
          "color": "#2b2e33",
          "fontFamily": "Noto Sans",
          "fontSize": 16,
          "includeFontPadding": false,
          "textTransform": "uppercase",
          "verticalAlign": "middle",
        }
      }
      testID="Avatar.text"
    >
      A
    </Text>
  </View>
</View>
`;

exports[`Avatar component tests Size: xlarge, shape: circle, type: icon 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 49,
          "width": 49,
        },
        {
          "backgroundColor": "#44e858",
        },
        {
          "borderRadius": 100,
        },
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      fill="none"
      focusable={false}
      height={24}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#2b2e33"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      testID="Avatar.icon"
      vbHeight={24}
      vbWidth={24}
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4281019955,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281019955,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="Avatar.icon"
        />
        <RNSVGPath
          d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281019955,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="Avatar.icon"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Avatar component tests Size: xlarge, shape: circle, type: image 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 49,
          "width": 49,
        },
        false,
        {
          "borderRadius": 100,
        },
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <Image
      resizeMode="cover"
      source={
        {
          "testUri": "../../../src/components/Avatar/testImage.png",
        }
      }
      style={
        {
          "height": 49,
          "width": 49,
        }
      }
      testID="Avatar.image"
    />
  </View>
</View>
`;

exports[`Avatar component tests Size: xlarge, shape: circle, type: label 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 49,
          "width": 49,
        },
        {
          "backgroundColor": "#44e858",
        },
        {
          "borderRadius": 100,
        },
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <Text
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        {
          "color": "#2b2e33",
          "fontFamily": "Noto Sans",
          "fontSize": 16,
          "includeFontPadding": false,
          "textTransform": "uppercase",
          "verticalAlign": "middle",
        }
      }
      testID="Avatar.text"
    >
      A
    </Text>
  </View>
</View>
`;

exports[`Avatar component tests Size: xlarge, shape: sqare, type: icon 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 49,
          "width": 49,
        },
        {
          "backgroundColor": "#44e858",
        },
        false,
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      fill="none"
      focusable={false}
      height={24}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#2b2e33"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      testID="Avatar.icon"
      vbHeight={24}
      vbWidth={24}
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4281019955,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281019955,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="Avatar.icon"
        />
        <RNSVGPath
          d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281019955,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="Avatar.icon"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Avatar component tests Size: xlarge, shape: square, type: image 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 49,
          "width": 49,
        },
        false,
        false,
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <Image
      resizeMode="cover"
      source={
        {
          "testUri": "../../../src/components/Avatar/testImage.png",
        }
      }
      style={
        {
          "height": 49,
          "width": 49,
        }
      }
      testID="Avatar.image"
    />
  </View>
</View>
`;

exports[`Avatar component tests Size: xlarge, shape: square, type: label 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 49,
          "width": 49,
        },
        {
          "backgroundColor": "#44e858",
        },
        false,
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <Text
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        {
          "color": "#2b2e33",
          "fontFamily": "Noto Sans",
          "fontSize": 16,
          "includeFontPadding": false,
          "textTransform": "uppercase",
          "verticalAlign": "middle",
        }
      }
      testID="Avatar.text"
    >
      A
    </Text>
  </View>
</View>
`;

exports[`Avatar component tests With badge, showBadge: false 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 28,
          "width": 28,
        },
        {
          "backgroundColor": "#44e858",
        },
        {
          "borderRadius": 100,
        },
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <Text
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        {
          "color": "#2b2e33",
          "fontFamily": "Noto Sans",
          "fontSize": 16,
          "includeFontPadding": false,
          "textTransform": "uppercase",
          "verticalAlign": "middle",
        }
      }
      testID="Avatar.text"
    >
      A
    </Text>
  </View>
</View>
`;

exports[`Avatar component tests With badge, showBadge: true 1`] = `
<View
  collapsable={false}
  testID="Avatar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "#cecfd2",
          "borderRadius": 14,
          "borderWidth": 1,
          "justifyContent": "center",
          "overflow": "hidden",
        },
        {
          "height": 28,
          "width": 28,
        },
        {
          "backgroundColor": "#44e858",
        },
        {
          "borderRadius": 100,
        },
        undefined,
      ]
    }
    testID="Avatar.container"
  >
    <Text
      ellipsizeMode="clip"
      numberOfLines={1}
      style={
        {
          "color": "#2b2e33",
          "fontFamily": "Noto Sans",
          "fontSize": 16,
          "includeFontPadding": false,
          "textTransform": "uppercase",
          "verticalAlign": "middle",
        }
      }
      testID="Avatar.text"
    >
      A
    </Text>
  </View>
  <View
    style={
      [
        {
          "position": "absolute",
          "right": 0,
          "top": -7,
        },
        {
          "height": 0,
          "left": 0,
          "width": 750,
        },
      ]
    }
    testID="Avatar.badgeContainer"
  >
    <View
      onLayout={[Function]}
      style={
        {
          "alignSelf": "flex-start",
        }
      }
      testID="Avatar.badgeInnerContainer"
    >
      <View
        style={
          [
            {
              "alignItems": "flex-start",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#44e858",
              },
              {
                "borderRadius": 100,
                "height": 24,
                "justifyContent": "center",
                "paddingHorizontal": 8,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "#2b2e33",
                  "fontFamily": "TT Fellows",
                  "fontSize": 12,
                  "includeFontPadding": false,
                  "verticalAlign": "middle",
                },
                {
                  "minWidth": undefined,
                },
              ]
            }
          >
            12
          </Text>
        </View>
        <View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            {
              "flexDirection": "row",
              "height": 0,
              "position": "absolute",
              "width": 750,
            }
          }
        >
          <View
            collapsable={false}
          >
            <Text
              numberOfLines={1}
              onLayout={[Function]}
              style={
                {
                  "color": "#2b2e33",
                  "fontFamily": "TT Fellows",
                  "fontSize": 12,
                  "includeFontPadding": false,
                  "verticalAlign": "middle",
                }
              }
            >
              12
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
